# --------------------------------------------------------------------------------------
# Special settings
# --------------------------------------------------------------------------------------

-Djdk.attach.allowAttachSelf=true
-Djdk.nio.maxCachedBufferSize=

# For version 330, 331
-Dpresto-temporarily-allow-java8=true

# --------------------------------------------------------------------------------------
# Standard Options
# --------------------------------------------------------------------------------------

-server

# --------------------------------------------------------------------------------------
# Non-standard Options
# --------------------------------------------------------------------------------------

-Xmx8g

-Xmx8g

# --------------------------------------------------------------------------------------
# Advanced Runtime Options
# --------------------------------------------------------------------------------------

-XX:OnOutOfMemoryError=kill -9 %p

-XX:-UseBiasedLocking

# --------------------------------------------------------------------------------------
# Advanced JIT Compiler Options
# --------------------------------------------------------------------------------------

-XX:+AggressiveOpts

-XX:ReservedCodeCacheSize=512M

# --------------------------------------------------------------------------------------
# Advanced Serviceability Options
# --------------------------------------------------------------------------------------

-XX:+HeapDumpOnOutOfMemoryError

-XX:+PrintClassHistogram

# --------------------------------------------------------------------------------------
# Advanced Garbage Collection Options
# --------------------------------------------------------------------------------------

-XX:+ExplicitGCInvokesConcurrent

-XX:G1HeapRegionSize=32M

-XX:MaxRAMPercentage=95.0

-XX:+UseG1GC

-XX:+UseGCOverheadLimit
